# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.103 2004/10/21 17:19:42 wolf31o2 Exp $

  21 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Stopping udev from using the nasty device tarball.  We don't need it anyway.

  21 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh, modules/catalyst_support.py:
  Fixing gpm support by uncommenting default settings. Fixing case where
  boot/kernel/$kname/packages or boot/kernel/$kname/postconf were empty.
  Changing sparc kernel files from kernel* to kernel-* so kernel.msg does
  not get renamed. Fixed a problem where we were accidentally removing the
  hwdata-knoppix versions of pci.ids and usb.ids and linking
  /usr/share/misc/*.ids to non-existent files. This should hopefully be it
  for 2004.3 and catalyst 1.1.0.

  19 Oct 2004; John Davis <zhen@gentoo.org> arch/ia64.py:
  patch from vapier@gentoo.org for bug #68080

  19 Oct 2004; John Davis <zhen@gentoo.org> catalyst, files/catalyst.conf,
  livecd/runscript-support/kmerge.sh:
  made kernel caching dependent on the "pkgcache" option so that genkernel's
  postconf can actually work

  18 Oct 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh:
  patch submitted by wolf31o2@gentoo.org to fix the rest of the gensplash woes

  17 Oct 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  firmware tarball fix for packages that need firmware such as ipw2100

  16 Oct 2004; <zhen@gentoo.org> livecd/files/x86-help.msg,
  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,