@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.7 2004/10/19 04:06:35 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/files/Attic/catalyst.conf,v 1.8 2004/10/22 04:23:16 wolf31o2 Exp $
 
 # Simple desriptions of catalyst settings. Please refer to the online
 # documentation for more information.
@@ -11,9 +11,13 @@ distdir="/usr/portage/distfiles"
 
 # options set different build-time options for catalyst. Some examples are:
 # ccache = enables build time ccache support (highly recommended)
-# distcc = enable distcc support for building. You have to set distcc_hosts in your spec file.
-# pkgcache = keeps a tbz2 of every built package (useful if your build stops prematurely)
-options="ccache pkgcache"
+# distcc = enable distcc support for building. You have to set distcc_hosts in
+#	your spec file.
+# pkgcache = keeps a tbz2 of every built package (useful if your build stops
+#	prematurely)
+# kerncache = keeps a tbz2 of your built kernel and modules (useful if your
+#	build stops in livecd-stage2)
+options="ccache pkgcache kerncache"
 
 # sharedir specifies where all of the catalyst runtime executables are. Most users do
 # not need to change this.
